# ai-assistant-app

./: .env.example  .gitignore  .prettierignore  LICENSE  README.md  eslint.config.js  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
public/: profile-overlay.html  profile-overlay.js  scale-overlay.html  scale-overlay.js  settings-overlay.html  settings-overlay.js  transparency-overlay.html  transparency-overlay.js
src/: App.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: automation.rs  browser.rs  captions.rs  config.rs  diagnostics.rs  hotkeys.rs  lib.rs  main.rs  profiles.rs  screenshot.rs
src-tauri/src/commands/: health.rs
src/config/: env.ts
src/lib/tauri/: client.ts  contracts.ts
src/styles/: global.css
