[package]
name = "ai-assistant-app"
version = "0.1.0"
description = "Desktop AI assistant application"
authors = ["AI Assistant App Contributors"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "ai_assistant_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }

