[package]
name = "ai-assistant-app"
version = "0.2.0"
description = "Desktop AI assistant application"
authors = ["AI Assistant App Contributors"]
license = "MIT"
edition = "2021"
rust-version = "1.77"

[lib]
name = "ai_assistant_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22.1"
png = "0.17.16"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["unstable"] }
webview2-com = "0.38.2"
windows = { version = "0.61.3", features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_System_Com",
  "Win32_UI_Accessibility",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_WindowsAndMessaging"
] }
